feat: update api
1. 去掉数据库，将数据打印到控制台
