# src/api/log.schema.js
@@ -10,6 +10,12 @@ export const createLogReqSchema = {
         title: { type: "string", description: "日志标题" },
         desc: { type: "string", description: "日志详情" },
         createBy: { type: "string", description: "创建者" },
+        createAt: {
+          tsType: "Date",
+          type: "string",
+          format: "date-time",
+          description: "创建时间",
+        },
       },
     },
   },
@@ -20,29 +26,19 @@ export const createLogResSchema = {
   required: [],
   properties: {
     content: {
-      allOf: [
-        {
-          additionalProperties: false,
-          type: "object",
-          properties: {
-            title: { type: "string", description: "日志标题" },
-            desc: { type: "string", description: "日志详情" },
-            createBy: { type: "string", description: "创建者" },
-          },
+      additionalProperties: false,
+      type: "object",
+      properties: {
+        title: { type: "string", description: "日志标题" },
+        desc: { type: "string", description: "日志详情" },
+        createBy: { type: "string", description: "创建者" },
+        createAt: {
+          tsType: "Date",
+          type: "string",
+          format: "date-time",
+          description: "创建时间",
         },
-        {
-          additionalProperties: false,
-          type: "object",
-          required: ["id"],
-          properties: {
-            id: { type: "string" },
-            updateAt: { tsType: "Date", type: "string", format: "date-time" },
-            updateBy: { type: "string" },
-            createAt: { tsType: "Date", type: "string", format: "date-time" },
-            createBy: { type: "string" },
-          },
-        },
-      ],
+      },
     },
   },
 };
